{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 28,
  "lineage": "29471165-250e-78aa-a1ad-7cf37f2ff731",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e467e8e78d77bcd2",
            "domain": "vpc",
            "id": "eipalloc-041845c936faed5df",
            "network_interface": "eni-06387124e3136e272",
            "private_dns": "ip-10-0-1-205.us-west-2.compute.internal",
            "private_ip": "10.0.1.205",
            "public_dns": "ec2-44-226-58-250.us-west-2.compute.amazonaws.com",
            "public_ip": "44.226.58.250",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:internet-gateway/igw-065cc73ad1fac180b",
            "id": "igw-065cc73ad1fac180b",
            "owner_id": "024150987696",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041845c936faed5df",
            "id": "nat-0cad8de936d3ed586",
            "network_interface_id": "eni-06387124e3136e272",
            "private_ip": "10.0.1.205",
            "public_ip": "44.226.58.250",
            "subnet_id": "subnet-0aa1f023eb4fb348c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04a3361acde8d4b56",
            "owner_id": "024150987696",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065cc73ad1fac180b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ecabbe0531ccba89",
            "owner_id": "024150987696",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cad8de936d3ed586",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043a7e63584ab2b8c",
            "route_table_id": "rtb-0ecabbe0531ccba89",
            "subnet_id": "subnet-09a9cf3618abc5013"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.route_private",
            "aws_subnet.private_1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010356b59e956027b",
            "route_table_id": "rtb-0ecabbe0531ccba89",
            "subnet_id": "subnet-027232d18e24c6c95"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.route_private",
            "aws_subnet.private_2",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fea2cb0b971ff32",
            "route_table_id": "rtb-0ecabbe0531ccba89",
            "subnet_id": "subnet-0a3662f9f3bfbccf0"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.route_private",
            "aws_subnet.private_3",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d3eea39c8078e04",
            "route_table_id": "rtb-04a3361acde8d4b56",
            "subnet_id": "subnet-0aa1f023eb4fb348c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-public",
            "aws_subnet.public_1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2f427f27a579b20",
            "route_table_id": "rtb-04a3361acde8d4b56",
            "subnet_id": "subnet-02b0a6a54f1cf5ece"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-public",
            "aws_subnet.public_2",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feedbf282f1050e9",
            "route_table_id": "rtb-04a3361acde8d4b56",
            "subnet_id": "subnet-0e4177b6b6e8b17f9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-public",
            "aws_subnet.public_3",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:subnet/subnet-09a9cf3618abc5013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09a9cf3618abc5013",
            "map_public_ip_on_launch": false,
            "owner_id": "024150987696",
            "tags": {
              "Name": "private_1-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:subnet/subnet-027232d18e24c6c95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-027232d18e24c6c95",
            "map_public_ip_on_launch": false,
            "owner_id": "024150987696",
            "tags": {
              "Name": "private_2-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:subnet/subnet-0a3662f9f3bfbccf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0a3662f9f3bfbccf0",
            "map_public_ip_on_launch": false,
            "owner_id": "024150987696",
            "tags": {
              "Name": "private_3-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:subnet/subnet-0aa1f023eb4fb348c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aa1f023eb4fb348c",
            "map_public_ip_on_launch": true,
            "owner_id": "024150987696",
            "tags": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:subnet/subnet-02b0a6a54f1cf5ece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02b0a6a54f1cf5ece",
            "map_public_ip_on_launch": true,
            "owner_id": "024150987696",
            "tags": {
              "Name": "public_2-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:subnet/subnet-0e4177b6b6e8b17f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e4177b6b6e8b17f9",
            "map_public_ip_on_launch": true,
            "owner_id": "024150987696",
            "tags": {
              "Name": "public_3-demo"
            },
            "vpc_id": "vpc-0b6c8e8bf4dbf3bb0"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:024150987696:vpc/vpc-0b6c8e8bf4dbf3bb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a428c80b6506fed",
            "default_route_table_id": "rtb-0d08ebf11412e6300",
            "default_security_group_id": "sg-00e9c63b6bd547cd8",
            "dhcp_options_id": "dopt-b1dfb2c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b6c8e8bf4dbf3bb0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d08ebf11412e6300",
            "owner_id": "024150987696",
            "tags": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}